Aesthetic html changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,11 @@
    <body>
       <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
          <div class="container">
-            <a class="navbar-brand" href="#">Frugality</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
-            <div class="collapse navbar-collapse" id="navcol-1"><a class="btn btn-primary ms-auto" role="button" href="#">About</a></div>
+            <a class="navbar-brand" href="/">Frugality</a>
+            <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
+        	<div class="collapse navbar-collapse" id="navcol-1">
+            <a class="btn btn-primary ms-auto" role="button" href="/FutureProjects">Future Project Suggestions</a>
+            </div>
          </div>
       </nav>
       <header class="text-center text-white masthead" style="background: url(&quot;assets/img/martins-cardoso-7xyvDUTcKvM-unsplash.jpg&quot;);" margin-bottom: 15px>
@@ -54,9 +57,9 @@
          <div class="social"></div>
          <!-- End: Social Icons --><!-- Start: Links -->
          <ul class="list-inline">
-            <li class="list-inline-item"><a href="#">Home</a></li>
-            <li class="list-inline-item"><a href="About.html">About</a></li>
-            <li class="list-inline-item"><a href="FutureProjects.html">Suggest Future Projects</a></li>
+            <li class="list-inline-item"><a href="/">Home</a></li>
+            <li class="list-inline-item"><a href="/About">About</a></li>
+            <li class="list-inline-item"><a href="/FutureProjects">Suggest Future Projects</a></li>
          </ul>
          <!-- End: Links --><!-- Start: Copyright -->
          <p class="copyright">LetsBeFrugal © 2021</p>
