--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,31 @@
          
          gtag('config', 'G-BNLC00RYY7');
       </script>
+      <style>
+        #loader {
+            border: 12px solid #f3f3f3;
+            border-radius: 50%;
+            border-top: 12px solid #444444;
+            width: 70px;
+            height: 70px;
+            animation: spin 1s linear infinite;
+        }
+          
+        @keyframes spin {
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+          
+        .center {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+        }
+    </style>
    </head>
    <body>
       <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
@@ -39,9 +64,9 @@
                </div>
                <div class="col-md-10 col-lg-8 col-xl-7 mx-auto position-relative">
                   <form action="" method="POST">
-                     <div class="row">
+                     <div class="row" >
                         <div class="col-12 col-md-9 mb-2 mb-md-0"><input class="form-control" type="text" name="ZIP" placeholder="Enter your ZIP code or City/State..." style="padding: 11px 16px;"></div>
-                        <div class="col-12 col-md-3"><button class="btn btn-primary btn-lg" type="submit">Search!</button></div>
+                        <div onsubmit="return false;" class="col-12 col-md-3"><button id="Login" class="btn btn-primary btn-lg" type="submit" onclick="showDiv()">Search!</button></div>
                      </div>
                   </form>
                </div>
@@ -49,7 +74,19 @@
          </div>
       </header>
       <section padding: 5%;>
-      <div align="center" padding: 5%;> {{ waiting | safe }} </div>
+  <div id="loadingGif" align="center" style="display:none"><br><p>Hold a moment!</p><br><img src="https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif"></div>
+            <script>
+function showDiv() {
+  document.getElementById('loadingGif').style.display = "block";
+  setTimeout(function() {
+    document.getElementById('loadingGif').style.display = "none";
+  },2000);
+   
+}
+      </script>
+      </section>
+      <section>
+      <div align = "center"> {{ waiting | safe}} </div>
       </section>
       <!-- Start: Footer Basic -->
       <footer class="footer-basic">
