--- a/templates/index.html
+++ b/templates/index.html
@@ -20,29 +20,65 @@
          gtag('config', 'G-BNLC00RYY7');
       </script>
       <style>
-        #loader {
-            border: 12px solid #f3f3f3;
-            border-radius: 50%;
-            border-top: 12px solid #444444;
-            width: 70px;
-            height: 70px;
-            animation: spin 1s linear infinite;
-        }
-          
-        @keyframes spin {
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-          
-        .center {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            margin: auto;
-        }
+.loader,
+.loader:before,
+.loader:after {
+  background: #d6d6d6;
+  -webkit-animation: load1 1s infinite ease-in-out;
+  animation: load1 1s infinite ease-in-out;
+  width: 1em;
+  height: 4em;
+}
+.loader {
+  color: #d6d6d6;
+  text-indent: -9999em;
+  margin: 88px auto;
+  position: relative;
+  font-size: 11px;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+  position: absolute;
+  top: 0;
+  content: '';
+}
+.loader:before {
+  left: -1.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 1.5em;
+}
+@-webkit-keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em;
+  }
+}
+@keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em;
+  }
+}
     </style>
    </head>
    <body>
@@ -74,13 +110,13 @@
          </div>
       </header>
       <section padding: 5%;>
-  <div id="loadingGif" align="center" style="display:none"><br><p>Hold a moment!</p><br><img src="https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif"></div>
+  <div id="loadingGif" align="center" class = "loader" style="display:none"><br><p>Hold a moment!</p><br> <p>We're grabbing your info now!</p></div>
             <script>
 function showDiv() {
   document.getElementById('loadingGif').style.display = "block";
   setTimeout(function() {
     document.getElementById('loadingGif').style.display = "none";
-  },2000);
+  },5000);
    
 }
       </script>
