--- a/templates/index.html
+++ b/templates/index.html
@@ -110,19 +110,19 @@
          </div>
       </header>
       <section padding: 5%;>
-  <div id="loadingGif" align="center" class = "loader" style="display:none"><br><p>Hold a moment!</p><br> <p>We're grabbing your info now!</p></div>
+            <div class="loader" id="loader" style="display:none">Loading...</div>
             <script>
 function showDiv() {
-  document.getElementById('loadingGif').style.display = "block";
+  document.getElementById('loader').style.display = "block";
   setTimeout(function() {
-    document.getElementById('loadingGif').style.display = "none";
-  },5000);
+    document.getElementById('loader').style.display = "none";
+  },2000);
    
 }
       </script>
       </section>
       <section>
-      <div align = "center"> {{ waiting | safe}} </div>
+      <div align = "center"> <br> <br> {{ waiting | safe}} <br> <br> </div>
       </section>
       <!-- Start: Footer Basic -->
       <footer class="footer-basic">
