--- a/templates/index.html
+++ b/templates/index.html
@@ -19,67 +19,6 @@
          
          gtag('config', 'G-BNLC00RYY7');
       </script>
-      <style>
-.loader,
-.loader:before,
-.loader:after {
-  background: #d6d6d6;
-  -webkit-animation: load1 1s infinite ease-in-out;
-  animation: load1 1s infinite ease-in-out;
-  width: 1em;
-  height: 4em;
-}
-.loader {
-  color: #d6d6d6;
-  text-indent: -9999em;
-  margin: 88px auto;
-  position: relative;
-  font-size: 11px;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
-}
-.loader:before,
-.loader:after {
-  position: absolute;
-  top: 0;
-  content: '';
-}
-.loader:before {
-  left: -1.5em;
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
-}
-.loader:after {
-  left: 1.5em;
-}
-@-webkit-keyframes load1 {
-  0%,
-  80%,
-  100% {
-    box-shadow: 0 0;
-    height: 4em;
-  }
-  40% {
-    box-shadow: 0 -2em;
-    height: 5em;
-  }
-}
-@keyframes load1 {
-  0%,
-  80%,
-  100% {
-    box-shadow: 0 0;
-    height: 4em;
-  }
-  40% {
-    box-shadow: 0 -2em;
-    height: 5em;
-  }
-}
-    </style>
    </head>
    <body>
       <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
@@ -110,13 +49,13 @@
          </div>
       </header>
       <section padding: 5%;>
-            <div class="loader" id="loader" style="display:none">Loading...</div>
+            <div id="loader" style="display:none"> This may take a moment! Just hold on!</div>
             <script>
 function showDiv() {
   document.getElementById('loader').style.display = "block";
   setTimeout(function() {
     document.getElementById('loader').style.display = "none";
-  },2000);
+  },30000);
    
 }
       </script>
