--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
          </div>
       </header>
       <section padding: 5%;>
-            <div id="loader" style="display:none"> This may take a moment! Just hold on!</div>
+            <div id="loader" style="display:none" align="center"> This may take a moment! Just hold on!</div>
             <script>
 function showDiv() {
   document.getElementById('loader').style.display = "block";
