--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,15 @@
          
          gtag('config', 'G-BNLC00RYY7');
       </script>
+      <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<script>
+  kofiWidgetOverlay.draw('manatmethods', {
+    'type': 'floating-chat',
+    'floating-chat.donateButton.text': 'Support Us',
+    'floating-chat.donateButton.background-color': '#5cb85c',
+    'floating-chat.donateButton.text-color': '#fff'
+  });
+</script>
    </head>
    <body>
       <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
@@ -55,7 +64,7 @@ function showDiv() {
   document.getElementById('loader').style.display = "block";
   setTimeout(function() {
     document.getElementById('loader').style.display = "none";
-  },30000);
+  },2000);
    
 }
       </script>
