--- a/templates/index.html
+++ b/templates/index.html
@@ -20,14 +20,6 @@
          gtag('config', 'G-BNLC00RYY7');
       </script>
       <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-<script>
-  kofiWidgetOverlay.draw('manatmethods', {
-    'type': 'floating-chat',
-    'floating-chat.donateButton.text': 'Support Us',
-    'floating-chat.donateButton.background-color': '#5cb85c',
-    'floating-chat.donateButton.text-color': '#fff'
-  });
-</script>
    </head>
    <body>
       <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
@@ -87,5 +79,14 @@ function showDiv() {
          <!-- End: Copyright -->
       </footer>
       <!-- End: Footer Basic --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script><script src="assets/js/smart-forms.min.js"></script>
+<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<script>
+  kofiWidgetOverlay.draw('manatmethods', {
+    'type': 'floating-chat',
+    'floating-chat.donateButton.text': 'Support me',
+    'floating-chat.donateButton.background-color': '#00b9fe',
+    'floating-chat.donateButton.text-color': '#fff'
+  });
+</script>
    </body>
 </html>
