--- a/templates/index.html
+++ b/templates/index.html
@@ -44,13 +44,21 @@
                         <div class="col-12 col-md-9 mb-2 mb-md-0"><input class="form-control" type="text" name="ZIP" placeholder="Enter your ZIP code or City/State..." style="padding: 11px 16px;"></div>
                         <div onsubmit="return false;" class="col-12 col-md-3"><button id="Login" class="btn btn-primary btn-lg" type="submit" onclick="showDiv()">Search!</button></div>
                      </div>
+                     	<div align = "center">
+                       		<input type="radio" id="WholeFoods" name="store_name" value="WholeFoods">
+  							<label for="WholeFoods">Whole Foods</label><br>
+  							<input type="radio" id="Aldis US" name="store_name" value="Aldis US">
+  							<label for="Aldis US">Aldis US</label><br>
+  							<input type="radio" id="Aldis AU" name="store_name" value="Aldis AU">
+  							<label for="Aldis AU">Aldis AU</label>
+  						</div>
                   </form>
                </div>
             </div>
          </div>
       </header>
       <section padding: 5%;>
-            <div id="loader" style="display:none" align="center"> This may take a moment! Just hold on!</div>
+            <div id="loader" style="display:none" align="center"> <br> <br> This may take a moment! Just hold on!</div>
             <script>
 function showDiv() {
   document.getElementById('loader').style.display = "block";
