added default radio

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                         <div onsubmit="return false;" class="col-12 col-md-3"><button id="Login" class="btn btn-primary btn-lg" type="submit" onclick="showDiv()">Search!</button></div>
                      </div>
                      	<div align = "center">
-                       		<input type="radio" id="WholeFoods" name="store_name" value="WholeFoods">
+                       		<input type="radio" id="WholeFoods" name="store_name" value="WholeFoods" checked>
   							<label for="WholeFoods">Whole Foods</label><br>
   							<input type="radio" id="Aldis US" name="store_name" value="Aldis US">
   							<label for="Aldis US">Aldis US</label><br>
@@ -91,7 +91,7 @@ function showDiv() {
 <script>
   kofiWidgetOverlay.draw('manatmethods', {
     'type': 'floating-chat',
-    'floating-chat.donateButton.text': 'Support me',
+    'floating-chat.donateButton.text': 'Support Us',
     'floating-chat.donateButton.background-color': '#00b9fe',
     'floating-chat.donateButton.text-color': '#fff'
   });
