--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,8 @@
   							<label for="Aldis US">Aldis US</label><br>
   							<input type="radio" id="Aldis AU" name="store_name" value="Aldis AU">
   							<label for="Aldis AU">Aldis AU</label>
+  							<input type="radio" id="Aldis UK" name="store_name" value="Aldis UK">
+  							<label for="Aldis UK">Aldis UK</label>
   						</div>
                   </form>
                </div>
