--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -20,18 +20,21 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
    </head>
    <body style="font-family: Arapey, serif;">
-      <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
+           <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
          <div class="container">
-            <a class="navbar-brand" href="#">IntelligentPoker</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
-            <div class="collapse navbar-collapse" id="navcol-1"><a class="btn btn-primary ms-auto" role="button" href="#">Sign Up!</a></div>
+            <a class="navbar-brand" href="/">Frugality</a>
+            <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
+        	<div class="collapse navbar-collapse" id="navcol-1">
+            <a class="btn btn-primary ms-auto" role="button" href="/FutureProjects">Future Project Suggestions</a>
+            </div>
          </div>
       </nav>
-      <header class="text-center text-white masthead" style="background: url(&quot;/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5&quot;);">
+      <header class="text-center text-white masthead" style="background: url(&quot;assets/img/martins-cardoso-7xyvDUTcKvM-unsplash.jpg&quot;);" margin-bottom: 15px>
          <div class="overlay"></div>
          <div class="container">
             <div class="row">
                <div class="col-xl-9 mx-auto position-relative">
-                  <h1 class="mb-5" style="font-family: Arapey, serif;">Win more.<br>Play more.</h1>
+                  <h1 class="mb-5">Get Updates <br> on <br> New Features.</h1>
                </div>
                <div class="col-md-10 col-lg-8 col-xl-7 mx-auto position-relative">
                   <form form action="" method="POST">
@@ -44,83 +47,6 @@
             </div>
          </div>
       </header>
-      <!-- Start: Highlight Clean -->
-      <section class="highlight-clean">
-         <div class="container">
-            <!-- Start: Intro -->
-            <div class="intro">
-               <h2 class="text-center" style="font-family: Arapey, serif;">IntelligentPoker</h2>
-               <p class="text-center" style="font-family: Arapey, serif;">Experience the BETA release of IntelligentPoker, a new tool for poker players online. Sign up for more updates and download the fold chart for free.</p>
-            </div>
-            <!-- End: Intro --><!-- Start: Buttons -->
-            <div class="buttons" style="font-family: Arapey, serif;"><a class="btn btn-primary" role="button" href="#" style="font-family: Arapey, serif;">Sign Up</a><button class="btn btn-light" type="button" style="font-family: Arapey, serif;">Download Chart</button></div>
-            <!-- End: Buttons -->
-         </div>
-      </section>
-      <!-- End: Highlight Clean -->
-      <section class="text-center bg-light features-icons">
-         <div class="container">
-            <div class="row">
-               <div class="col-lg-4">
-                  <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
-                     <div class="d-flex features-icons-icon"><i class="icon-badge m-auto text-primary" data-bss-hover-animate="pulse"></i></div>
-                     <h3>Competition Vetted</h3>
-                     <p class="lead mb-0">After simulating millions of games, our method comes on top with an average of X wins per 10 hands.</p>
-                  </div>
-               </div>
-               <div class="col-lg-4">
-                  <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
-                     <div class="d-flex features-icons-icon"><i class="icon-wallet m-auto text-primary" data-bss-hover-animate="pulse"></i></div>
-                     <h3>Make Money</h3>
-                     <p class="lead mb-0">Use InitelligentPoker and increase your win rate. It can detect bluffing, and game situations with just a couple datapoints</p>
-                  </div>
-               </div>
-               <div class="col-lg-4">
-                  <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
-                     <div class="d-flex features-icons-icon"><i class="icon-graph m-auto text-primary" data-bss-hover-animate="pulse"></i></div>
-                     <h3>Dynamic</h3>
-                     <p class="lead mb-0">It plays hands for the given moment at every step of the game, just update the table positions and a new suggestion will appear</p>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </section>
-      <section class="showcase">
-         <div class="container-fluid p-0">
-            <div class="row g-0">
-               <div class="col-lg-6 text-white showcase-img" style="background-image:url(&quot;/assets/img/bg-showcase-2.jpg?h=82f59ff9dc7ce5bb277d6dfa737a6e45&quot;);"><span></span></div>
-               <div class="col-lg-6 my-auto order-lg-1 showcase-text">
-                  <h2 style="font-family: Arapey, serif;">Built with the future</h2>
-                  <p class="lead mb-0" style="font-family: Arapey, serif;">IntelligentPoker uses state of the art machine learning techniques and implementations to bring the best decisions to the table.</p>
-               </div>
-            </div>
-         </div>
-      </section>
-      <section class="text-center bg-light testimonials">
-         <div class="container">
-            <h2 class="mb-5" style="font-family: Arapey, serif;">What people are saying...</h2>
-            <div class="row">
-               <div class="col-lg-4">
-                  <div class="mx-auto testimonial-item mb-5 mb-lg-0">
-                     <h5 style="font-family: Arapey, serif;">Walid S.</h5>
-                     <p class="font-weight-light mb-0" style="font-family: Arapey, serif;">This tool is incredible, I saw it as a money losing hobby before, but now I can make some beet money!</p>
-                  </div>
-               </div>
-               <div class="col-lg-4" style="font-family: Arapey, serif;">
-                  <div class="mx-auto testimonial-item mb-5 mb-lg-0" style="font-family: Arapey, serif;">
-                     <h5 style="font-family: Arapey, serif;">Xihuang Z.</h5>
-                     <p class="font-weight-light mb-0" style="font-family: Arapey, serif;">IntelligentPoker has taught me so much about my game, in times where i disagree with the choices, I look back and can find my biases</p>
-                  </div>
-               </div>
-               <div class="col-lg-4">
-                  <div class="mx-auto testimonial-item mb-5 mb-lg-0">
-                     <h5 style="font-family: Arapey, serif;">Sasha P.</h5>
-                     <p class="font-weight-light mb-0">IntelligentPoker has changed the way I see table games, a simple yet extremely effective tool.</p>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </section>
       <section class="text-center text-white call-to-action" style="background: url(&quot;/assets/img/jesus-eca-6B-IevAR_AE-unsplash.jpg?h=5e4f481002128c4ff8d37855977ebe30&quot;);">
          <div class="overlay"></div>
          <div class="container">
