--- a/templates/SignUpThankYou.html
+++ b/templates/SignUpThankYou.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navcol-1"><a class="btn btn-primary ms-auto" role="button" href="#">Sign Up!</a></div>
          </div>
       </nav>
-      <header class="text-center text-white masthead" style="background: url(&quot;/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5&quot;);">
+      <header class="text-center text-white masthead" style="background: url(&quot;assets/img/martins-cardoso-7xyvDUTcKvM-unsplash.jpg&quot;);" margin-bottom: 15px>
          <div class="overlay"></div>
          <div class="container">
             <div class="row">
