--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -10,15 +10,12 @@
       <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
       <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
       <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
-      <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=5b9504f177f83f045f95d3b940d4012f">
+      <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amiri">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arapey">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
-      <link rel="stylesheet" href="/assets/css/styles.min.css?h=f9714966383161b2850b0983cd3ee2b5">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-   </head>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
+      <link rel="stylesheet" href="assets/css/styles.min.css">
+      <link rel="stylesheet" href="assets/css/wff.css">
+      </head>
    <body style="font-family: Arapey, serif;">
            <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
          <div class="container">
