--- a/templates/FutureProjects.html
+++ b/templates/FutureProjects.html
@@ -9,10 +9,10 @@
 </script>
 </head><body>      <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
          <div class="container">
-            <a class="navbar-brand" href="/">Frugality</a>
+            <a class="navbar-brand" href="/">Juhas Bazaar</a>
             <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
         	<div class="collapse navbar-collapse" id="navcol-1">
-            <a class="btn btn-primary ms-auto" role="button" href="/FutureProjects">Future Project Suggestions</a>
+            <a class="btn btn-primary ms-auto" role="button" href="/">Take Me Back Home!</a>
             </div>
          </div>
       </nav><!-- Start: Contact Form Clean --><section class="contact-clean"><form data-bss-recipient="b59cae5d4e4be953edbc0f78eeaad7e1"><h2 class="text-center">Suggest Future Projects</h2><!-- Start: Success Example --><div class="mb-3"><input class="form-control" type="text" name="name" placeholder="Name"></div><!-- End: Success Example --><!-- Start: Error Example --><div class="mb-3"><input class="form-control is-invalid" type="email" name="email" placeholder="Email"><!-- Start: The Error Message --><small class="form-text text-danger">Please enter a correct email address.</small><!-- End: The Error Message --></div><!-- End: Error Example --><div class="mb-3"><textarea class="form-control" name="message" placeholder="Message" rows="14"></textarea></div><div class="text-center mb-3"><button class="btn btn-primary" type="submit">send </button></div></form></section><!-- End: Contact Form Clean --><!-- Start: Footer Basic --><footer class="footer-basic"><!-- Start: Social Icons --><div class="social"></div><!-- End: Social Icons --><!-- Start: Links -->         <ul class="list-inline">
