--- a/templates/SignUpThankYou.html
+++ b/templates/SignUpThankYou.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-      <title>Home - Brand</title>
+      <title>Sign Up Complete- Juhas Bazaar</title>
       <meta name="description" content="One poker tool to rule the others. A machine learning approach to dynamic decision making in poker.">
       <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
       <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
@@ -19,7 +19,7 @@
    <body style="font-family: Arapey, serif;">
       <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
          <div class="container">
-            <a class="navbar-brand" href="#">IntelligentPoker</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
+            <a class="navbar-brand" href="#">Juhas Bazaar</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
             <div class="collapse navbar-collapse" id="navcol-1"><a class="btn btn-primary ms-auto" role="button" href="#">Sign Up!</a></div>
          </div>
       </nav>
@@ -33,7 +33,19 @@
             </div>
          </div>
       </header>
-
+            <footer class="footer-basic">
+         <!-- Start: Social Icons -->
+         <div class="social"></div>
+         <!-- End: Social Icons --><!-- Start: Links -->
+         <ul class="list-inline">
+            <li class="list-inline-item"><a href="/">Home</a></li>
+            <li class="list-inline-item"><a href="/About">About</a></li>
+            <li class="list-inline-item"><a href="/SignUp">Suggest Future Projects</a></li>
+         </ul>
+         <!-- End: Links --><!-- Start: Copyright -->
+         <p class="copyright">LetsBeFrugal © 2021</p>
+         <!-- End: Copyright -->
+      </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script><script src="/assets/js/script.min.js?h=a2cee23efd5962953aee193ace61225c"></script>
    </body>
 </html>
