--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-      <title>Home - Frugality</title>
+      <title>Home - Juhas Bazaar</title>
       <meta name="description" content="A page to be frugal - sharing attempts to cut costs.">
       <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
@@ -24,10 +24,10 @@
    <body>
       <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
          <div class="container">
-            <a class="navbar-brand" href="/">Frugality</a>
+            <a class="navbar-brand" href="/">Juhas Bazaar</a>
             <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
         	<div class="collapse navbar-collapse" id="navcol-1">
-            <a class="btn btn-primary ms-auto" role="button" href="/FutureProjects">Future Project Suggestions</a>
+            <a class="btn btn-primary ms-auto" role="button" href="/SignUp">Sign Up for Updates!</a>
             </div>
          </div>
       </nav>
@@ -82,6 +82,7 @@ function showDiv() {
          <ul class="list-inline">
             <li class="list-inline-item"><a href="/">Home</a></li>
             <li class="list-inline-item"><a href="/About">About</a></li>
+            <li class="list-inline-item"><a href="/SignUp">Sign Up for Updates</a></li>
             <li class="list-inline-item"><a href="/FutureProjects">Suggest Future Projects</a></li>
          </ul>
          <!-- End: Links --><!-- Start: Copyright -->
