--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-      <title>Home - Brand</title>
+      <title>Sign Up - Juhas Bazaar</title>
       <meta name="description" content="One poker tool to rule the others. A machine learning approach to dynamic decision making in poker.">
       <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
       <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
@@ -16,13 +16,13 @@
       <link rel="stylesheet" href="assets/css/styles.min.css">
       <link rel="stylesheet" href="assets/css/wff.css">
       </head>
-   <body style="font-family: Arapey, serif;">
+   <body>
            <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
          <div class="container">
-            <a class="navbar-brand" href="/">Frugality</a>
+            <a class="navbar-brand" href="/">Juhas Bazaar</a>
             <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
         	<div class="collapse navbar-collapse" id="navcol-1">
-            <a class="btn btn-primary ms-auto" role="button" href="/FutureProjects">Future Project Suggestions</a>
+            <a class="btn btn-primary ms-auto" role="button" href="/">Take Me Back Home!</a>
             </div>
          </div>
       </nav>
@@ -36,32 +36,27 @@
                <div class="col-md-10 col-lg-8 col-xl-7 mx-auto position-relative">
                   <form form action="" method="POST">
                      <div class="row">
-                        <div class="col-12 col-md-9 mb-2 mb-md-0"><input class="form-control form-control-lg" name ="Email" type="email" placeholder="Enter your email..." style="font-family: Arapey, serif;"></div>
-                        <div class="col-12 col-md-3"><button class="btn btn-primary btn-lg" type="submit" style="font-family: Arapey, serif;">Sign up!</button></div>
+                        <div class="col-12 col-md-9 mb-2 mb-md-0"><input class="form-control form-control-lg" name ="Email" type="email" placeholder="Enter your email..."></div>
+                        <div class="col-12 col-md-3"><button class="btn btn-primary btn-lg" type="submit">Sign up!</button></div>
                      </div>
                   </form>
                </div>
             </div>
          </div>
       </header>
-      <section class="text-center text-white call-to-action" style="background: url(&quot;/assets/img/jesus-eca-6B-IevAR_AE-unsplash.jpg?h=5e4f481002128c4ff8d37855977ebe30&quot;);">
-         <div class="overlay"></div>
-         <div class="container">
-            <div class="row">
-               <div class="col-xl-9 mx-auto position-relative">
-                  <h2 class="mb-4" style="font-family: Arapey, serif;">Ready to get started? Sign up now!</h2>
-               </div>
-               <div class="col-md-10 col-lg-8 col-xl-7 mx-auto position-relative" style="font-family: Arapey, serif;">
-                  <form style="font-family: Arapey, serif;">
-                     <div class="row" style="font-family: Arapey, serif;">
-                        <div class="col-12 col-md-9 mb-2 mb-md-0" style="font-family: Arapey, serif;"><input class="form-control form-control-lg" type="email" placeholder="Enter your email..." style="font-family: Arapey, serif;"></div>
-                        <div class="col-12 col-md-3" style="font-family: Arapey, serif;"><button class="btn btn-primary btn-lg" type="submit" style="font-family: Arapey, serif;">Sign up!</button></div>
-                     </div>
-                  </form>
-               </div>
-            </div>
-         </div>
-      </section>
+            <footer class="footer-basic">
+         <!-- Start: Social Icons -->
+         <div class="social"></div>
+         <!-- End: Social Icons --><!-- Start: Links -->
+         <ul class="list-inline">
+            <li class="list-inline-item"><a href="/">Home</a></li>
+            <li class="list-inline-item"><a href="/About">About</a></li>
+            <li class="list-inline-item"><a href="/FurtherProjects">Future Project Suggestions</a></li>
+         </ul>
+         <!-- End: Links --><!-- Start: Copyright -->
+         <p class="copyright">LetsBeFrugal © 2021</p>
+         <!-- End: Copyright -->
+      </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script><script src="/assets/js/script.min.js?h=a2cee23efd5962953aee193ace61225c"></script>
    </body>
 </html>
