--- a/templates/SignUpThankYou.html
+++ b/templates/SignUpThankYou.html
@@ -15,8 +15,17 @@
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
       <link rel="stylesheet" href="assets/css/styles.min.css">
       <link rel="stylesheet" href="assets/css/wff.css">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8M87V4XPHF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8M87V4XPHF');
+</script>
        </head>
-   <body style="font-family: Arapey, serif;">
+   <body>
       <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
          <div class="container">
             <a class="navbar-brand" href="#">Juhas Bazaar</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
@@ -28,7 +37,7 @@
          <div class="container">
             <div class="row">
                <div class="col-xl-9 mx-auto position-relative">
-                  <h1 class="mb-5" style="font-family: Arapey, serif;">Thank you for your interest, there are currently {{ waiting }} others waiting! <br> We will be in touch!</h1>
+                  <h1 class="mb-5">Thank you for your interest, there are currently {{ waiting }} others waiting! <br> We will be in touch!</h1>
                </div>
             </div>
          </div>
