--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html style="font-family: Arapey, serif;">
+<html>
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
       <title>Sign Up - Juhas Bazaar</title>
-      <meta name="description" content="One poker tool to rule the others. A machine learning approach to dynamic decision making in poker.">
-      <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
-      <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
-      <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
-      <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
-      <link rel="icon" type="image/jpeg" sizes="1024x819" href="/assets/img/amol-tyagi-7dkLbNE6ycI-unsplash.jpg?h=e1d53b2604a7a851d69469aff2fde3a5">
+      <meta name="description" content="A place to find sales at various grocery stores outlets around the world.">
       <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
       <link rel="stylesheet" href="assets/css/styles.min.css">
       <link rel="stylesheet" href="assets/css/wff.css">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8M87V4XPHF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8M87V4XPHF');
+</script>
       </head>
    <body>
            <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
