adding retreival pipeline

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,9 +49,9 @@
                         <label for="store_name">Choose a grocery chain:</label>
                         <select name="store_name" id="store_name">
                            <option value="WholeFoods">Whole Foods</option>
-                           <option value="Aldis US">Aldis US</option>
-                           <option value="Aldis AU">Aldis AU</option>
-                           <option value="Aldis UK">Aldis UK</option>
+                           <option value="Aldi US">Aldi US</option>
+                           <option value="Aldi AU">Aldi AU</option>
+                           <option value="Aldi UK">Aldi UK</option>
                         </select>
                      </div>
                   </form>
