--- a/templates/FutureProjects.html
+++ b/templates/FutureProjects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Juhas Bazaar - Future Projects</title><meta name="description" content="A page to be frugal - sharing attempts to cut costs."><link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora"><link rel="stylesheet" href="assets/css/styles.min.css">
 <!-- Global site tag (gtag.js) - Google Analytics -->
+<script data-ad-client="ca-pub-5277128496544207" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8M87V4XPHF"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
