--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -11,6 +11,7 @@
       <link rel="stylesheet" href="assets/css/styles.min.css">
       <link rel="stylesheet" href="assets/css/wff.css">
       <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script data-ad-client="ca-pub-5277128496544207" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8M87V4XPHF"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
