Works like a charm - now to add selenium local for gspread updates. Ko-Fi widget added again

--- a/templates/About.html
+++ b/templates/About.html
@@ -21,4 +21,12 @@
             <li class="list-inline-item"><a href="/">Home</a></li>
             <li class="list-inline-item"><a href="/About">About</a></li>
             <li class="list-inline-item"><a href="/FutureProjects">Suggest Future Projects</a></li>
-         </ul><!-- End: Links --><!-- Start: Copyright --><p class="copyright">LetsBeFrugal © 2021</p><!-- End: Copyright --></footer><!-- End: Footer Basic --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script><script src="assets/js/smart-forms.min.js"></script></body></html>
+         </ul><!-- End: Links --><!-- Start: Copyright --><p class="copyright">LetsBeFrugal © 2021</p><!-- End: Copyright --><script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<script>
+  kofiWidgetOverlay.draw('manatmethods', {
+    'type': 'floating-chat',
+    'floating-chat.donateButton.text': 'Support Us',
+    'floating-chat.donateButton.background-color': '#5cb85c',
+    'floating-chat.donateButton.text-color': '#fff'
+  });
+</script></footer><!-- End: Footer Basic --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script><script src="assets/js/smart-forms.min.js"></script></body></html>
