--- a/templates/About.html
+++ b/templates/About.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Juhas Bazaar - About</title><meta name="description" content="A page to be frugal - sharing attempts to cut costs."><link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora"><link rel="stylesheet" href="assets/css/styles.min.css">
 <!-- Global site tag (gtag.js) - Google Analytics -->
+<link rel="shortcut icon" href="assets/favicon.ico">
 <script data-ad-client="ca-pub-5277128496544207" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8M87V4XPHF"></script>
 <script>
@@ -14,7 +15,7 @@
             <a class="navbar-brand" href="/">Frugality</a>
             <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
         	<div class="collapse navbar-collapse" id="navcol-1">
-            <a class="btn btn-primary ms-auto" role="button" href="/FutureProjects">Future Project Suggestions</a>
+            <a class="btn btn-primary ms-auto" role="button" href="/SignUp">Sign Up for Future Updates!</a>
             </div>
          </div>
       </nav><!-- Start: Article Clean --><section class="article-clean"><div class="container"><div class="row"><div class="col-lg-10 col-xl-8 offset-lg-1 offset-xl-2"><!-- Start: Intro --><div class="intro"><h1 class="text-center">A Study in Pennies</h1><!-- Start: Date and Author --><p class="text-center"><span class="by">by</span> <a href="#">BrilliantScarcity354</a><span class="date">2021</span></p><!-- End: Date and Author --><img class="img-fluid" src="assets/img/patrick-hendry-cJQneOMJH5w-unsplash.jpg"></div><!-- End: Intro --><!-- Start: Text --><div class="text"><p>What is this for</p><p>Why did I make it</p><h2>What does it do?</h2><p>Quick Recap</p><h2>What comes next?</h2><p>Quick Recap</p></div><!-- End: Text --></div></div></div></section><!-- End: Article Clean --><!-- Start: Footer Basic --><footer class="footer-basic"><!-- Start: Social Icons --><div class="social"></div><!-- End: Social Icons --><!-- Start: Links -->         <ul class="list-inline">
