--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -10,6 +10,7 @@
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
       <link rel="stylesheet" href="assets/css/styles.min.css">
       <link rel="stylesheet" href="assets/css/wff.css">
+      <link rel="shortcut icon" href="assets/favicon.ico">
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script data-ad-client="ca-pub-5277128496544207" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8M87V4XPHF"></script>
@@ -56,7 +57,7 @@
          <ul class="list-inline">
             <li class="list-inline-item"><a href="/">Home</a></li>
             <li class="list-inline-item"><a href="/About">About</a></li>
-            <li class="list-inline-item"><a href="/FurtherProjects">Future Project Suggestions</a></li>
+            <li class="list-inline-item"><a href="/FutureProjects">Future Project Suggestions</a></li>
          </ul>
          <!-- End: Links --><!-- Start: Copyright -->
          <p class="copyright">LetsBeFrugal © 2021</p>
