--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
       <link rel="stylesheet" href="assets/css/styles.min.css">
       <link rel="stylesheet" href="assets/css/wff.css">
+      <link rel="shortcut icon" href="assets/favicon.ico">
+      
       <script data-ad-client="ca-pub-5277128496544207" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-8M87V4XPHF"></script>
