--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,7 @@
                            <option value="Aldi US">Aldi US</option>
                            <option value="Aldi AU">Aldi AU</option>
                            <option value="Aldi UK">Aldi UK</option>
+                           <option value="Lidl">Lidl</option>
                         </select>
                      </div>
                   </form>
