HotJar extension added to analyze lack of sign up volume

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,18 @@
       <link rel="stylesheet" href="assets/css/styles.min.css">
       <link rel="stylesheet" href="assets/css/wff.css">
       <link rel="shortcut icon" href="assets/favicon.ico">
-      
+      <!-- Hotjar Tracking Code for www.juhasbazaar.com -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:2439362,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
       <script data-ad-client="ca-pub-5277128496544207" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-8M87V4XPHF"></script>
