view width of table

--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
       </script>
       </section>
       <section>
-         <div align = "center"> <br> <br> {{ waiting | safe}} <br> <br> </div>
+         <div width="100vw" align = "center"> <br> <br> {{ waiting | safe}} <br> <br> </div>
       </section>
       <!-- Start: Footer Basic -->
       <footer class="footer-basic">
