--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,11 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
-
+<style>
+special {
+  width: 100vw;
+}
+</style>
       <script data-ad-client="ca-pub-5277128496544207" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-8M87V4XPHF"></script>
@@ -87,8 +91,8 @@
                
       </script>
       </section>
-      <section>
-         <div width="100vw" align = "center"> <br> <br> {{ waiting | safe}} <br> <br> </div>
+      <section class="special">
+         <div align = "center"> <br> <br> {{ waiting | safe}} <br> <br> </div>
       </section>
       <!-- Start: Footer Basic -->
       <footer class="footer-basic">
