--- a/templates/index.html
+++ b/templates/index.html
@@ -12,21 +12,21 @@
       <link rel="stylesheet" href="assets/css/wff.css">
       <link rel="shortcut icon" href="assets/favicon.ico">
       <!-- Hotjar Tracking Code for www.juhasbazaar.com -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:2439362,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
-<style>
-special {
-  width: 100vw;
-}
-</style>
+      <script>
+         (function(h,o,t,j,a,r){
+             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+             h._hjSettings={hjid:2439362,hjsv:6};
+             a=o.getElementsByTagName('head')[0];
+             r=o.createElement('script');r.async=1;
+             r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+             a.appendChild(r);
+         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+      </script>
+      <style>
+         special {
+         width: 100vw;
+         }
+      </style>
       <script data-ad-client="ca-pub-5277128496544207" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-8M87V4XPHF"></script>
@@ -49,6 +49,18 @@ special {
             </div>
          </div>
       </nav>
+      <div class="row">
+         <div class="col">
+            <section class="highlight-clean">
+               <div class="container">
+                  <div class="intro">
+                     <h2 class="text-center">New Home!</h2>
+                     <p class="text-center">Welcome to Juhas Bazaar, we have a new home now at http://www.juhasbazaar.com or search Juhas Bazaar in Google!<br /><br />Curious about the name? We will post a story about it soon!</p>
+                  </div>
+               </div>
+            </section>
+         </div>
+      </div>
       <header class="text-center text-white masthead" style="background: url(&quot;assets/img/martins-cardoso-7xyvDUTcKvM-unsplash.jpg&quot;);" margin-bottom: 15px>
          <div class="overlay"></div>
          <div class="container">
@@ -109,14 +121,14 @@ special {
          <p class="copyright">LetsBeFrugal © 2021</p>
          <!-- End: Copyright -->
          <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-<script>
-  kofiWidgetOverlay.draw('manatmethods', {
-    'type': 'floating-chat',
-    'floating-chat.donateButton.text': 'Support Us',
-    'floating-chat.donateButton.background-color': '#5cb85c',
-    'floating-chat.donateButton.text-color': '#fff'
-  });
-</script>
+         <script>
+            kofiWidgetOverlay.draw('manatmethods', {
+              'type': 'floating-chat',
+              'floating-chat.donateButton.text': 'Support Us',
+              'floating-chat.donateButton.background-color': '#5cb85c',
+              'floating-chat.donateButton.text-color': '#fff'
+            });
+         </script>
       </footer>
       <!-- End: Footer Basic --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script><script src="assets/js/smart-forms.min.js"></script>
    </body>
