--- a/templates/index.html
+++ b/templates/index.html
@@ -103,8 +103,8 @@
                
       </script>
       </section>
-      <section class="special">
-         <div align = "center"> <br> <br> {{ waiting | safe}} <br> <br> </div>
+      <section>
+         <div class="special" align = "center"> <br> <br> {{ waiting | safe}} <br> <br> </div>
       </section>
       <!-- Start: Footer Basic -->
       <footer class="footer-basic">
