--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
                <div class="container">
                   <div class="intro">
                      <h2 class="text-center">New Home!</h2>
-                     <p class="text-center">Welcome to Juhas Bazaar, we have a new home now at http://www.juhasbazaar.com or search Juhas Bazaar in Google!<br /><br />Curious about the name? We will post a story about it soon!</p>
+                     <p class="text-center">Welcome! We have a new home now at <a href="http://www.juhasbazaar.com">Juhas Bazaar</a>, bookmark the link or just search Juhas Bazaar in Google!<br /><br />Curious about the name? We will post a story about it soon on our About page!</p>
                   </div>
                </div>
             </section>
