--- a/templates/index.html
+++ b/templates/index.html
@@ -23,9 +23,11 @@
          })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
       </script>
       <style>
-         special {
-         width: 90vw;
-         }
+         select {
+  			width: 100%;
+  			padding:10px;
+  			border-radius:10px;
+			}
       </style>
       <script data-ad-client="ca-pub-5277128496544207" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <!-- Global site tag (gtag.js) - Google Analytics -->
